# file_publisher

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
file_publisher/: models.py
src/file_publisher/: __init__.py  core.py
tests/: test_core.py
